# verbm

./: .gitignore  README.md  pyproject.toml  requirements.txt  version.yml
.github/workflows/: bump.yml  mypy.yml  publish.yml  release.yml  test.yml
src/: main.py
src/verbm/: clap.py  init.py  run.py  source.py  template.py  version.py
src/verbm/config/: config.py
src/verbm/version_control/: call.py  git.py
src/verbum/: __main__.py  clap.py  config.py  run.py  source.py  version.py
src/verbum/config/: config.py  version_control.py
src/verbum/version_control/: call.py  git.py  interface.py
tests/: test_call.py  test_config.py  test_git.py  test_init.py  test_run.py  test_source.py  test_version.py
tests/data/: valid.yml
tests/data/source/consistent/: version.yaml
tests/data/source/inconsistent/: version.yaml
tests/data/valid/: no-vc-2.yml  vc-matcher.yml  vc-type.yml
